engine/tests/detection_corpus/bad/sqli_drop_fstring.py
cursor.execute(f"DROP TABLE {table_name}")
